Bug 948406 - Append some zeros to EGL attrib lists to work around a bug in Android/B2G emulator. r=vladv, a=lsblakk